public/assets/css/mapStyles.css
@font-face {
    font-family: 'FontAwesome';
    src: url('/assets/fonts/fontawesome-webfont.ttf');
}
@font-face {
    font-family: 'CharterITCPro-BlackItalic';
    src: url('/assets/fonts/CharterITCPro-BlackItalic.ttf');
}
@font-face {
    font-family: 'ProximaNova-Regular';
    src: url('/assets/fonts/ProximaNova-Regular.ttf');
}

html, body {
  height: 100%;
}

body {
    position: relative;
    background-color: #000;
    padding: 0;
    margin: 0;
    color: #fff;
    font-size : 16px;
}
.filter ul li div {
    font-size: 24px;
}

@media screen and (min-width:480px) and (max-width:800px) {
  /* Target landscape smartphones, portrait tablets, narrow desktops */
    body {
      font-size: 14px;
    }
    .filter ul li div {
      font-size: 18px;
    }
}

@media screen and (max-width:479px) {
  /* Target portrait smartphones */

    body {
         font-size: 10px;
    }
    .filter ul li div {
        font-size: 8px;
    }
}
select:focus {
  background-color: #EE3D64;
}
.app {
  position: absolute;
  min-height: 100%;
  height : 100%;
  overflow: hidden;
  background-image: radial-gradient(circle at 50% 30%, #102176 0%, #102139 35%, black 65%)
}
.filter {
    position: absolute;
    top: 10%;
    bottom: 0px;
    left: 0px;
    right: 0px;
    background-color: rgba(0, 0, 0, 0.75);
    display: none;
    z-index: 10000;
    overflow-y: scroll;
}
.filter ul {
    list-style:  none;
    display: block;
    margin: auto;
    padding: 0;
    width: 85%;
    margin-top: 7px;
}
.filter ul li {
    position: relative;
    margin: 1.66%;
    display: block;
    float: left;
    width: 30%;
    padding-bottom: 30%;
    background-color: rgb(34,37,43);
    color: #fff;
    opacity: 1;
    border: 1px solid rgb(76,78,85);
}
.filter ul li.on {
    background-color: rgb(232,66,102);
}
.filter ul li div {
    position: absolute;
    height: 100%;
    width: 100%;
}
.filter ul li div p {
    position: absolute;
    bottom: 0;
    font-size: 1.3em;
    font-family: 'ProximaNova-Regular';
    text-align: center;
    width: 100%;
    -webkit-margin-before: 0;
    -webkit-margin-after: 0;
    word-break:break-word;
    line-height: normal;
}
.amenities-modal-close {
  font-size: 6vh;
  float : right;
  display : none;
}
button {
    width: 45%;
    margin: 3px;
}
#floors {
    padding: 0px 4px 0px 4px;
}
#map {
  margin-top: 10px;
  z-index: 1000;
}
h3 {
    font-family: "CharterITCPro-BlackItalic";
    font-size: 18px;
    margin: 0;
    padding: 0;
    padding-top: 5px;
    padding-bottom: 10px;
    padding-right: 4px;
    padding-left: 4px;
}
h4 {
    font-family: 'ProximaNova-Regular';;
    font-size: 1.5em;
    box-shadow: 0px 5px 5px rgba(19, 18, 18, 0.37);
    margin: 0;
    padding: 0;
    padding-bottom: 10px;
}
#floatingmenu {
    width:80%;
    max-height:30%;
    height : 30%;
    background-color: #22252B;
    position:absolute;
    /*margin: 5%;*/
    bottom:-60%;
    left : 0;
    right : 0;
    margin-left: auto;
    margin-right: auto;
    z-index:99999;
    -moz-transition: all 800ms ease;
    -ms-transition: all 800ms ease;
    -o-transition: all 800ms ease;
    -webkit-transition: all 800ms ease;
    transition: all 800ms ease;
    border: 1px solid #7A7676;
}
#floatingmenu.open {
    bottom:5%;
    -webkit-transition: all 300ms ease;
    -moz-transition: all 300ms ease;
    -ms-transition: all 300ms ease;
    -o-transition: all 300ms ease;
    transition: all 300ms ease;
}
.layer_name {
  max-height: 15%;
  padding: 8px;
  padding-bottom: 24px;
}
.layer_name > div {
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.layer_name > img {
  height: 13%;
  right : 0;
  position: absolute;
  top: -17%;
}
.panel_body {
  padding: 8px;
  font-size: 1.6em;
  height: 78%;
  font-family: 'ProximaNova-Regular';
  overflow-y: scroll;
}
.active-search-container {
  display : none;
  height : 100%;
  width : 90%;
  margin-left: auto;
  margin-right: auto;
  right : 0;
  left : 0;
  position: absolute;
  font-family: 'ProximaNova-Regular';
  font-size : 1.3em;
  top: 5%;
}
.active-search-bar-container {
  height : 8%;
  background-color: #22252B;
  padding-left: 10px;
  padding-right: 10px;
  position: relative;
  font-family: 'ProximaNova-Regular';
  border : 1px solid #7A7676;
  margin-bottom: 30px;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.active-search-icon {
  height : 20%;
  font-size : inherit;
  vertical-align: middle;
}
.active-search-bar-container > div {
    /*vertical-align: bottom;*/
    display : inline-block;
    height : 82%;
    border-bottom: 1px solid #404041;
    display: flex;
    justify-content: flex-end;
    flex-direction: row;
    align-items: center;
}
.active-search-bar-container > div:last-child {
  border:none;
}
.active-search-bar-container > img {
  height: 60%;
  flex: 0.15;
  margin-right: 5px;
}
input:focus { outline: none; }
#active_search_input {
  height : 100%;
  width : 100%;
  background-color: inherit;
  font-size : inherit;
  font-family: inherit;
  border: none;
  /*border-bottom : 1.5px solid #404041;
  border-radius: 0;
  vertical-align: middle;*/
}
.search-input-container {
  flex : 2;
}
.cancel-search {
  padding-left: 10px;
  flex : 1;
  padding-right: 10px;
}
.cancel-search > img {
  height: 60%;
  width: 18%;
}
.cancel-search-text {
  height : 100%;
  font-size : inherit;
  font-family: 'ProximaNova-Regular';
  display: inline-block;
}
.meeting-room-container {
  overflow-y: scroll;
  height : 70%;
}
.dark-table {
  background-color: #22252B;
  border : 1px solid #7A7676;
}
.dark-table > tbody > tr > td {
  border : none;
}
.dark-table > tbody > tr > td > div {
  border-bottom : 1px solid #979797;
  font-size : 17px;
  margin-left : 0.4em;
  margin-right : 1.7em;
  padding-bottom : 0.8em;
  padding-left : 0.5em;
}
.dark-table > tbody > tr:first-child > td {
  padding-top : 20px;
}
.dark-table > tbody > tr:last-child > td > div {
  border : none;
}
.buttons {
  display: inline-block;
  width: 100%;
  height: 20%;
  margin-top : 2%;
}
.amenities-container {
  display: inline-block;
  width: 100%;
  height: 40%;
  text-align: center;
  margin-bottom : 1em;
}
.amenities-container > button > .icon {
  height: 60%;
  width: auto;
}
.amenities-container > button > .pin {
  margin-left: 2%;
  margin-right: 2%;
}
.amenities-container > button > p {
  color : #D8D8D8;
  display : inline-block;
  font-size : 0.4em;
  height : auto;
  max-height: 100%;
  font-size: 1.3em;
  margin : 0;
  vertical-align: middle;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.curr-amen-icon {
  height: 100%;
  width: auto;
  margin-right : -4%;
  margin-left : -6%;
}
.no-amenities {
  background-color: #22252B;
}
.showing-amenities {
  background-color: #EE3D64;
}
.btn-amenities {
  color : white;
  width: 45%;
  height: 100%;
  text-align: left;
  font-size : 1.0em;
  font-family: 'ProximaNova-Regular';
  border-radius : 2px;
  display: inline-block;
  border : 1px solid #7A7676;
}
.btn-search {
  color : white;
  height: 100%;
  width: 45%;
  font-size : 1.0em;
  border-radius : 2px;
  border : 1px solid #7A7676;
  font-family: 'ProximaNova-Regular';
  background-color: #22252B;
  display: inline-block;
  text-align: left;
}
.dropdown-container {
  display: inline-block;
  text-align: center;
  font-size: 1.4em;
  height: 40%;
  font-family: 'ProximaNova-Regular';
  width: 100%;
}
.dropdown {
  -webkit-appearance: none;
  border: none;
  color: #fff;
  padding-right : 1.25em;
  outline: none;
  background-color: transparent;
  background-image: url("/assets/chevron-down.png");
  background-size: contain;
  background-repeat:no-repeat;
  background-position: right;
  width: 45%;
  height: 100%;
}
.dropdown::before {
  font-family : 'FontAwesome';
  content: "\f041";
  float : left;
}

.amenities-container > button {
  margin: 3px;
}

option, select {
  font-size: 1.4em;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.amn-icon:before {
  display: inline-block;
  font-size: 6vh;
  font-family : 'FontAwesome';
  content: "\f041";
}

.filter_close {
  position: absolute;
  right: 0px;
  top: 0px;
  width: 20px;
  height: 20px;
  font-size: 24px;
  line-height: 24px;
}
.meeting-room-display {
  position:absolute;
  left : 0;
  right : 0;
  margin-left: auto;
  margin-right: auto;
  width: 95%;
  height : 15%;
  top: 10px;
  border : 1px solid #7A7676;
  background-color: #22252B;
  z-index: 10;
}

.meeting-room-display > div {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  width: 90%;
  margin : auto;
  border-bottom: 1px solid #404041;
  text-align: center;
}

.meeting-room-display > div {
  text-align: left;
}

.meeting-room-display > div > div {
  font-size: 1.5em;
  font-family: 'ProximaNova-Regular';
  display: inline-block;
}

.meeting-room-display > div > i {
  float : right;
  font-size: 1.5em;
  font-family: 'ProximaNova-Regular';
  display: inline-block;
}

